fix: navigation on small screen

--- a/public/css/navigation.css
+++ b/public/css/navigation.css
@@ -134,3 +134,17 @@ nav a:hover:after {
         margin-left: auto; /* S'assurer que le burger est bien à droite */
     }
 }
+
+@media (max-width: 768px) {
+    .dropdown:hover .dropdown-content {
+        display: none; /* Disable hover on mobile */
+        opacity: 0;
+        transform: translateY(10px);
+    }
+
+    .dropdown.open .dropdown-content {
+        display: block;
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
